--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.0",
     "express": "^4.17.0",
+    "node-fetch": "^2.6.1",
     "twilio": "^3.33.0"
   }
 }
